src/objects/Article__c.object
<CustomObject>
    <description>Used to add multiple articles to a Case</description>
    <fields>
        <fullName>Account_Billing_Address__c</fullName>
        <description>Used in Approval Processes</description>
        <formula>Related_Case__r.Account.BillingStreet &amp; BR() &amp;
Related_Case__r.Account.BillingCity &amp; &quot; &quot; &amp;
Related_Case__r.Account.BillingState &amp; &quot; &quot; &amp;
Related_Case__r.Account.BillingPostalCode &amp; BR() &amp;
Related_Case__r.Account.BillingCountry</formula>
        <label>Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Used to display Account Name to Approval</description>
        <formula>Related_Case__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_OneSF_Id__c</fullName>
        <description>Used to display OneSF ID to Approval Processes</description>
        <formula>Related_Case__r.Account.OneSF_Id__c</formula>
        <label>Account OneSF Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <description>Used to display Phone number to Approval Processes</description>
        <formula>Related_Case__r.Account.Phone</formula>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_each__c</fullName>
        <label>Amount(each)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Article_Approval_Status__c</fullName>
        <label>Article Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Exception Request</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Description__c</fullName>
        <label>Article Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Agent_Processing_Return__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CS Agent Processing Return</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name_and_Number__c</fullName>
        <formula>Related_Case__r.Account.Name &amp;&quot; - &quot;&amp; Related_Case__r.Account.Movex__c &amp; &quot; - &quot;&amp;  Related_Case__r.Account.OneSF_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name and Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Approved__c</fullName>
        <label>Finance Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Approval_Status__c</fullName>
        <label>Manager Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Numbers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_Optional__c</fullName>
        <label>Note (Optional)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Order_Discount_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Original Order Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Original_Order_Number__c</fullName>
        <label>Original Order Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Articles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rep_Approval_Status__c</fullName>
        <label>Rep Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Numbers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Exception_Requested__c</fullName>
        <label>Return Exception Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Exception</fullName>
                    <default>true</default>
                    <label>No Exception</label>
                </value>
                <value>
                    <fullName>No record of purchase</fullName>
                </value>
                <value>
                    <fullName>Shelf life &lt; 1 yr</fullName>
                </value>
                <value>
                    <fullName>Purchased &gt; 180 days</fullName>
                    <label>Purchased &gt; 180 days - No Exchange</label>
                </value>
                <value>
                    <fullName>Not a DS Product</fullName>
                </value>
                <value>
                    <fullName>Product Opened</fullName>
                </value>
                <value>
                    <fullName>Writing on Product</fullName>
                </value>
                <value>
                    <fullName>Product Crushed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Damaged Product</fullName>
                </value>
                <value>
                    <fullName>Ripped label</fullName>
                </value>
                <value>
                    <fullName>Blood/Residue Stain</fullName>
                </value>
                <value>
                    <fullName>Staples</fullName>
                </value>
                <value>
                    <fullName>Missing TX Sticker</fullName>
                </value>
                <value>
                    <fullName>Tape Damage</fullName>
                </value>
                <value>
                    <fullName>Discolored Labels</fullName>
                </value>
                <value>
                    <fullName>Additional Item Not Part of Exchange</fullName>
                </value>
                <value>
                    <fullName>No Product In Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Numbers3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmitForApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the Articles:Default process to submit specific articles for approvals through the Update Return Case flow TFUS-000003107</description>
        <label>Submit For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Original_Purchase_Amount__c</fullName>
        <formula>( Quantity__c * Amount_Paid_each__c )* (1-Original_Order_Discount_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Original Purchase Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Approved_Article_Numbers__c</fullName>
        <formula>Case( TEXT( Article_Approval_Status__c),&quot;Approved&quot;,1,
&quot;Denied&quot;,1,


0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Completed Article Numbers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Article Number</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Box</fullName>
        <columns>NAME</columns>
        <columns>Return_Exception_Requested__c</columns>
        <columns>CS_Agent_Processing_Return__c</columns>
        <columns>Article_Approval_Status__c</columns>
        <columns>Rep_Assigned__c</columns>
        <columns>Rep_Approval_Status__c</columns>
        <columns>Manager_Assigned__c</columns>
        <columns>Manager_Approval_Status__c</columns>
        <columns>Finance_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Return_Exception_Requested__c</field>
            <operation>equals</operation>
            <value>Product Opened,Product Crushed</value>
        </filters>
        <label>Product Open, Product Crushed</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Article Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Numbers</pluralLabel>
    <recordTypes>
        <fullName>Return_Authorization</fullName>
        <active>true</active>
        <description>Used by North American Implants to gain approval on returning items</description>
        <label>Return Authorization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Complaints</fullName>
        <active>true</active>
        <description>Used for the Service Complaints</description>
        <label>Service Complaints</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>